jumpbox: add bosh-bastion for the deployment

--- a/src/omg-dm/omg.jinja
+++ b/src/omg-dm/omg.jinja
@@ -10,3 +10,9 @@ resources:
     zone: us-central1-b
     networkSelfLink: $(ref.pcfNetwork.networkSelfLink)
     subnetworkSelfLink: $(ref.pcfNetwork.mgmtSubnetworkSelfLink)
+- name: jumpbox
+  type: base/jumpbox.jinja
+  properties:
+    zone: us-central1-b
+    networkSelfLink: $(ref.pcfNetwork.networkSelfLink)
+    subnetworkSelfLink: $(ref.pcfNetwork.mgmtSubnetworkSelfLink)
