nat: wrong metadata tag for startup-script

--- a/src/omg-dm/nat/instance.jinja
+++ b/src/omg-dm/nat/instance.jinja
@@ -28,7 +28,7 @@ resources:
           diskSizeGb: 10
     metadata:
       items:
-        - key: "startup_script"
+        - key: startup-script
           value: |
             #!/bin/bash
             sh -c "echo 1 > /proc/sys/net/ipv4/ip_forward"
