ops_manager: Deploy an OpsMan VM

--- a/src/omg-dm/omg.jinja
+++ b/src/omg-dm/omg.jinja
@@ -16,3 +16,11 @@ resources:
     zone: us-central1-b
     networkSelfLink: $(ref.pcfNetwork.networkSelfLink)
     subnetworkSelfLink: $(ref.pcfNetwork.mgmtSubnetworkSelfLink)
+- name: ops_manager
+  type: ops_manager/ops_manager.jinja
+  properties:
+    region: us-central1
+    zone: us-central1-b
+    networkSelfLink: $(ref.pcfNetwork.networkSelfLink)
+    subnetworkSelfLink: $(ref.pcfNetwork.mgmtSubnetworkSelfLink)
+    projectOwner: {{ properties['projectOwner'] }}
