all: add outputs and runtime variables

--- a/src/omg-dm/base/jumpbox.jinja
+++ b/src/omg-dm/base/jumpbox.jinja
@@ -40,3 +40,7 @@ resources:
         ports:
           - 22
       - IPProtocol: icmp
+
+outputs:
+- name: vmName
+  value: $(ref.{{ baseName }}.name)
