ops_manager: service account was incorrectly applied

--- a/src/omg-dm/ops_manager/ops_manager.jinja
+++ b/src/omg-dm/ops_manager/ops_manager.jinja
@@ -86,7 +86,8 @@ resources:
           sourceImage: $(ref.{{ imageName }}.selfLink)
           diskType: projects/{{ env['project'] }}/zones/{{ properties['zone'] }}/diskTypes/pd-standard
           diskSizeGb: 50
-    serviceAccountName: $(ref.opsManServiceAccount.email)
+    serviceAccounts:
+      - email: $(ref.opsManServiceAccount.email)
     scopes:
       - cloud-platform
 
