ops_manager: Specify scope w/ SA otherwise it can't be used

--- a/src/omg-dm/ops_manager/ops_manager.jinja
+++ b/src/omg-dm/ops_manager/ops_manager.jinja
@@ -88,6 +88,8 @@ resources:
           diskSizeGb: 50
     serviceAccounts:
       - email: $(ref.opsManServiceAccount.email)
+        scopes:
+        - "https://www.googleapis.com/auth/cloud-platform"
 
 outputs:
 - name: opsManagerIp
