all: add UAA certificates, require rootDomain

--- a/src/omg-dm/ert/http_routing.jinja
+++ b/src/omg-dm/ert/http_routing.jinja
@@ -132,3 +132,7 @@ resources:
 outputs:
 - name: httpLoadBalancerIP
   value: $(ref.cf-global-address.address)
+- name: sslCertificate
+  value: $(ref.cf-ssl-cert.certificate)
+- name: sslPrivateKey
+  value: $(ref.cf-ssl-cert.privateKey)
