all: add resources config for ERT routers/ingress, expose httpBackendServiceName

--- a/src/omg-dm/omg.jinja
+++ b/src/omg-dm/omg.jinja
@@ -141,6 +141,12 @@ resources:
     parent: $(ref.omgConfig.name)
     variable: httpLoadBalancerIP
     text: $(ref.ertHttpRouting.httpLoadBalancerIP)
+- name: httpBackendServiceName
+  type: runtimeconfig.v1beta1.variable
+  properties:
+    parent: $(ref.omgConfig.name)
+    variable: httpBackendServiceName
+    text: $(ref.ertHttpRouting.httpBackendServiceName)
 - name: sshTargetPoolName
   type: runtimeconfig.v1beta1.variable
   properties:
