--- a/src/omg-dm/ert/http_routing.jinja
+++ b/src/omg-dm/ert/http_routing.jinja
@@ -132,6 +132,8 @@ resources:
 outputs:
 - name: httpLoadBalancerIP
   value: $(ref.cf-global-address.address)
+- name: httpBackendServiceName
+  value: $(ref.cf-http-backend.name)
 - name: sslCertificate
   value: $(ref.cf-ssl-cert.certificate)
 - name: sslPrivateKey
