--- a/src/omg-dm/ops_manager/ops_manager.jinja
+++ b/src/omg-dm/ops_manager/ops_manager.jinja
@@ -29,7 +29,7 @@ resources:
     tags:
       items:
       - internal
-      - no-ip
+      - {{ properties['targetTag'] }}
     networkInterfaces:
     - subnetwork: {{ properties['subnetworkSelfLink'] }}
     disks:
